--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2022. All rights reserved.</p>
+        <p>&copy; 2022. 21552011451-Dimas Anggara-TIFRP221PB.</p>
     </footer>
 </body>
 </html>
