--- a/kontak_kami.html
+++ b/kontak_kami.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2022. All rights reserved.</p>
+        <p>&copy; 2023. 21552011451-Dimas Anggara-TIFRP221PB.</p>
     </footer>
 </body>
 </html>
