--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2022. All rights reserved.</p>
+        <p>&copy; 2023. 21552011451-Dimas Anggara-TIFRP221PB.</p>
     </footer>
 </body>
 </html>
